# backend/src/routes/index.ts
@@ -9,6 +9,7 @@ import {
 import { getUserProfile } from '../controllers/user';
 import { authenticateUser } from '../middleware/auth';
 import { protect } from "../controllers/protected";
+import { getLocalEvent, createLocalEvent, updateLocalEvent, deleteLocalEvent } from "../controllers/local-events"
 
 const router = Router();
 
@@ -30,5 +31,11 @@ router.get("/movies/:movieId", getMovie);
 router.get("/movies/cinecircle/:movieId", getMovieById);
 router.put("/movies/cinecircle/:movieId", updateMovie);
 router.delete("/movies/:movieId", deleteMovie);
+
+// Local events routes
+router.get("/local-event/:id", getLocalEvent);
+router.post("/local-event", createLocalEvent);
+router.delete("/local-event/:id", deleteLocalEvent);
+
 
 export default router;
